# hangman

./: CMakeLists.txt  README.html  README.md  a.out  plan.txt
src/: Draw.cpp  client.cpp  hangman.cpp  main.cpp  main.hpp  sdl.cpp  server.cpp
src/client/: main.cpp
src/server/: main.cpp
